# A-fullstack-homework

./: .dockerignore  .gitignore  DATABASE_INTEGRATION.md  DEV_SCRIPTS.md  DOCKER_DEPLOYMENT.md  DOCKER_README.md  Dockerfile.backend  Dockerfile.backend.postgres  Dockerfile.frontend  README.md  ROUTE_PROTECTION_TEST.md  TICKET_MODAL_FEATURE.md  architecture.md  dev-start.sh  dev-stop.sh  docker-compose.prod.yml  docker-compose.yml  env.example  goal.md  goal_zh.md  nginx-simple.conf  nginx.conf  start.sh  start_db.sh  stop.sh  test-docker.sh  test_db_integration.py  todo.md
backend/: .pre-commit-config.yaml  BLACK_FORMATTING.md  FILE_STORAGE.md  Makefile  README.md  TESTING.md  TEST_EXAMPLE.md  init.sql  pyproject.toml  pytest.ini  run_tests.py
backend/data/: users.json
backend/src/app/: database.py  db_service.py  main.py  models.py  storage.py
backend/src/app/routers/: auth.py  employees.py  tickets.py
backend/src/app/schemas/: auth.py  ticket.py  user.py
backend/src/app/security/: dependencies.py  jwt.py  passwords.py
backend/src/expense_tracker_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/fixtures/: conftest.py  conftest_db.py
backend/tests/integration/: test_auth.py  test_employees.py  test_tickets.py
backend/tests/unit/: test_db_service.py  test_security.py  test_storage.py
frontend/: .gitignore  .prettierignore  PRETTIER.md  REDUX_INTEGRATION.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AuthInitializer.tsx  CreateTicketModal.tsx  Modal.tsx  (+9 more)
(+15 files in other folders)
